BoaUAT/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>sfcloud2__GoCloudz_Attachment_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attachment 1</label>
        <referenceTo>sfcloud2__Attachment__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quote_Attachment_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfcloud2__GoCloudz_Attachment_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attachment 2</label>
        <referenceTo>sfcloud2__Attachment__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quote_Attachment_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfcloud2__GoCloudz_Watermark__c</fullName>
        <description>Watermark to display on PDF</description>
        <inlineHelpText>Watermark to display on PDF</inlineHelpText>
        <label>Watermark</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sfcloud2__envelopeId__c</fullName>
        <description>DocuSign envelope id.</description>
        <inlineHelpText>DocuSign envelope id.</inlineHelpText>
        <label>Envelope Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>